Keep making it pretty

--- a/index.html
+++ b/index.html
@@ -33,46 +33,62 @@ layout: phasetwo/default
     <p>Ten books off the top of my head that have changed my mind or taught me something that I use every day. You should read them! If you want.</p>
     <ul class="books">
       <li>
-        <img src="https://assets.warpspire.com/images/books/after-geoengineering.jpg" />
-        <h3>After Geoengineering: Climate Tragedy, Repair, and Restoration</h3>
-        <p class="author">Holly Jean Buck</p>
+        <a href="https://bookshop.org/books/after-geoengineering-climate-tragedy-repair-and-restoration/9781788730365">
+          <img src="https://assets.warpspire.com/images/books/after-geoengineering.jpg" />
+          <h3>After Geoengineering: Climate Tragedy, Repair, and Restoration</h3>
+          <p class="author">Holly Jean Buck</p>
+        </a>
       </li>
       <li>
-        <img src="https://assets.warpspire.com/images/books/one-straw-revolution.jpg" />
-        <h3>One-Straw Revolution</h3>
-        <p class="author">Masanobu Fukuoka</p>
+        <a href="https://bookshop.org/books/the-one-straw-revolution-an-introduction-to-natural-farming/9781590173138">
+          <img src="https://assets.warpspire.com/images/books/one-straw-revolution.jpg" />
+          <h3>One-Straw Revolution</h3>
+          <p class="author">Masanobu Fukuoka</p>
+        </a>
       </li>
       <li>
-        <img src="https://assets.warpspire.com/images/books/patterns-of-home.jpg" />
-        <h3>Patterns of Home</h3>
-        <p class="author">Max Jacobson, Murray Silverstein, and Barbara Winslow</p>
+        <a href="https://smile.amazon.com/Patterns-Home-Essentials-Enduring-Design/dp/1561585335/ref=sr_1_2?keywords=patterns+of+home&qid=1638580357&sr=8-2">
+          <img src="https://assets.warpspire.com/images/books/patterns-of-home.jpg" />
+          <h3>Patterns of Home</h3>
+          <p class="author">Max Jacobson, Murray Silverstein, and Barbara Winslow</p>
+        </a>
       </li>
       <li>
-        <img src="https://assets.warpspire.com/images/books/getting-things-done.jpg" />
-        <h3>Getting Things Done</h3>
-        <p class="author">David Allen</p>
+        <a href="https://bookshop.org/books/getting-things-done-the-art-of-stress-free-productivity-ab00c26e-b599-4650-97de-d3d54a788ef6/9780143126560">
+          <img src="https://assets.warpspire.com/images/books/getting-things-done.jpg" />
+          <h3>Getting Things Done</h3>
+          <p class="author">David Allen</p>
+        </a>
       </li>
     </ul>
     <ul class="books">
       <li>
-        <img src="https://assets.warpspire.com/images/books/quiet.jpg" />
-        <h3>Quiet: The Power of Introverts in a World That Can't Stop Talking</h3>
-        <p class="author">Susan Cain</p>
+        <a href="https://bookshop.org/books/quiet-the-power-of-introverts-in-a-world-that-can-t-stop-talking/9780307352156">
+          <img src="https://assets.warpspire.com/images/books/quiet.jpg" />
+          <h3>Quiet: The Power of Introverts in a World That Can't Stop Talking</h3>
+          <p class="author">Susan Cain</p>
+        </a>
       </li>
       <li>
-        <img src="https://assets.warpspire.com/images/books/1491.jpg" />
-        <h3>1491: New Revelations of the Americas Before Columbus</h3>
-        <p class="author">Charles C. Mann</p>
+        <a href="https://bookshop.org/books/1491-second-edition-new-revelations-of-the-americas-before-columbus/9781400032051">
+          <img src="https://assets.warpspire.com/images/books/1491.jpg" />
+          <h3>1491: New Revelations of the Americas Before Columbus</h3>
+          <p class="author">Charles C. Mann</p>
+        </a>
       </li>
       <li>
-        <img src="https://assets.warpspire.com/images/books/predictably-irrational.jpg" />
-        <h3>Predictably Irrational</h3>
-        <p class="author">Dan Ariely</p>
+        <a href="https://bookshop.org/books/predictably-irrational-revised-and-expanded-edition-the-hidden-forces-that-shape-our-decisions/9780061353246">
+          <img src="https://assets.warpspire.com/images/books/predictably-irrational.jpg" />
+          <h3>Predictably Irrational</h3>
+          <p class="author">Dan Ariely</p>
+        </a>
       </li>
       <li>
-        <img src="https://assets.warpspire.com/images/books/a-place-of-my-own.jpg" />
-        <h3>A Place of My Own</h3>
-        <p class="author">Michael Pollan</p>
+        <a href="https://bookshop.org/books/a-place-of-my-own-the-architecture-of-daydreams/9780143114741">
+          <img src="https://assets.warpspire.com/images/books/a-place-of-my-own.jpg" />
+          <h3>A Place of My Own</h3>
+          <p class="author">Michael Pollan</p>
+        </a>
       </li>
     </ul>
   </div>
