There are four lights

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: phasetwo/default
 
   <div class="library">
     <h2>Books of Note</h2>
-    <p>Ten books off the top of my head that have changed my mind or taught me something that I use every day. You should read them! If you want.</p>
+    <p>Eight books off the top of my head that have changed my mind or taught me something that I use every day. You should read them! If you want.</p>
     <ul class="books">
       <li>
         <a href="https://bookshop.org/books/after-geoengineering-climate-tragedy-repair-and-restoration/9781788730365">
