Feels like a better example

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@ layout: phasetwo/default
         </a>
       </li>
       <li>
-        <a href="https://bookshop.org/books/a-place-of-my-own-the-architecture-of-daydreams/9780143114741">
-          <img src="https://assets.warpspire.com/images/books/a-place-of-my-own.jpg" />
-          <h3>A Place of My Own</h3>
-          <p class="author">Michael Pollan</p>
+        <a href="https://bookshop.org/books/stopping-the-noise-in-your-head-the-new-way-to-overcome-anxiety-and-worry/9780757319068">
+          <img src="https://assets.warpspire.com/images/books/stopping-the-noise-in-your-head.jpg" />
+          <h3>Stopping the Noise in Your Head</h3>
+          <p class="author">Dr. Reid Wilson PhD</p>
         </a>
       </li>
     </ul>
