--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@ layout: phasetwo/default
 
 <div class="homepage">
   <h2 class="first">It's me. Kyle <strike>Neath</strike> Aster.</h2>
-  <p>A long time ago, I used to build internet. Now I don't. <strong>Warpspire</strong> remains — my little home on the internet. These days I call it <em>fragments toward a more resilient future</em> for whatever that means. I'm not sure yet!</p>
+  <p>In a previous life, I used to build internet and go by Kyle Neath. These days I spend my time on creative pursuits of my own desires and go by <a href="https://www.instagram.com/p/CRFaaXlpzGo/">Kyle Aster</a> (after the Sierra Nevada wildflower).</p>
+  <p>Some days that means <a href="https://www.instagram.com/p/CSLVBzYrTjP/">mountain biking</a>, some days that means <a href="https://www.google.com/maps/place/986+Emerald+Bay+Rd,+South+Lake+Tahoe,+CA+96150/@38.9136127,-120.0072509,17z/data=!3m1!4b1!4m5!3m4!1s0x80998fba6f69437f:0x716634f92ce30e3d!8m2!3d38.9136085!4d-120.0050569">commercial property development</a>, some days that means investing in <a href="https://refugecoffee.com/">local coffee roasters</a>, some days that means working on my new house, and some days that means <a href="https://www.instagram.com/p/CPuLNyAJRVV/">throwin' chips</a> at my off-grid ranch.</p>
+  
+  <p>I try to follow my passions, but they all tend to revolved around my home of <a href="https://en.wikipedia.org/wiki/South_Lake_Tahoe,_California">South Lake Tahoe, CA</a>. I love it here ❤️</p>
+  
   <p>If you're feeling nostalgic, you can still browse the <a href="/proxima">older version of this site</a> and read all those old posts about software.</p>
   
   <div class="latest">
