--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@ layout: phasetwo/default
 
 <div class="homepage">
   <h2 class="first">It's me. Kyle <strike>Neath</strike> Aster.</h2>
-  <p>In a previous life, I used to build internet and go by Kyle Neath. These days I spend my time on creative pursuits of my own desires and go by <a href="https://www.instagram.com/p/CRFaaXlpzGo/">Kyle Aster</a> (after the Sierra Nevada wildflower).</p>
-  <p>Some days that means <a href="https://www.instagram.com/p/CSLVBzYrTjP/">mountain biking</a>, some days that means <a href="https://www.google.com/maps/place/986+Emerald+Bay+Rd,+South+Lake+Tahoe,+CA+96150/@38.9136127,-120.0072509,17z/data=!3m1!4b1!4m5!3m4!1s0x80998fba6f69437f:0x716634f92ce30e3d!8m2!3d38.9136085!4d-120.0050569">commercial property development</a>, some days that means investing in <a href="https://refugecoffee.com/">local coffee roasters</a>, some days that means working on SketchUp renderings for my new house, and some days that means <a href="https://www.instagram.com/p/CPuLNyAJRVV/">throwin' chips</a> at my off-grid ranch.</p>
+  <p>In a previous life, I used to build internet and go by Kyle Neath. These days I spend my time on creative pursuits and go by <a href="https://www.instagram.com/p/CRFaaXlpzGo/">Kyle Aster</a> (after the Sierra Nevada wildflower) from my home of <a href="https://en.wikipedia.org/wiki/South_Lake_Tahoe,_California">South Lake Tahoe</a>.</p>
   
-  <p>I try to follow my passions, but they all tend to revolved around my home of <a href="https://en.wikipedia.org/wiki/South_Lake_Tahoe,_California">South Lake Tahoe, CA</a>. I love it here ❤️</p>
+  <p>Some days that means <a href="https://www.instagram.com/p/CSLVBzYrTjP/">mountain biking</a>, some days that means <a href="https://www.google.com/maps/place/986+Emerald+Bay+Rd,+South+Lake+Tahoe,+CA+96150/@38.9136127,-120.0072509,17z/data=!3m1!4b1!4m5!3m4!1s0x80998fba6f69437f:0x716634f92ce30e3d!8m2!3d38.9136085!4d-120.0050569">commercial property development</a>, some days that means investing in <a href="https://refugecoffee.com/">local coffee roasters</a>, some days that means working on SketchUp renderings for my new house, and some days that means <a href="https://www.instagram.com/p/CPuLNyAJRVV/">throwin' chips</a> at my off-grid ranch.</p>
+
+  <p>Throughout it all, I try to understand how my life fits into a changing climate, and look for possibilities to <a href="https://alexsteffen.substack.com/p/ruggedize-your-life?s=r">ruggedize</a> our systems to build a more resilient future.</p>
   
   <p>If you're feeling nostalgic, you can still browse the <a href="/proxima">older version of this site</a> and read all those old posts about software.</p>
   
